# python-project

./: README.md
.github/actions/setup-repo/: action.yml
.github/workflows/: check-lockfile.yml  ci.yaml  docker-ci.yml
src/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/api/: .dockerignore  __init__.py  main.py
src/tests/: conftest.py  test_foo.py  test_main.py
